提交index.ht的跟新

--- a/b/js/2017050301.md
+++ b/b/js/2017050301.md
@@ -9,4 +9,12 @@
 
 
 <img src="../../image/3.png"/>
+
+### splice 
+  #### 基本介绍
+
+  第一个参数确认删除的位置的起始位置。第二参数始删除的数量,为0时是添加，第三个参数是添加的item
+
+
+  <img src="../../image/4.png"/>
         
